--- a/css/styles.css
+++ b/css/styles.css
@@ -145,8 +145,7 @@ ul {
   font-size: 14px;
   color: rgba(255, 255, 255, 0.6);
   margin: auto;
-  flex-direction: column;
-  align-content: center;
+  margin-left: -40px;
 }
 
 .boton-Titulo-Principal-Portafolio {
