--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,7 @@ address {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  cursor: pointer;
 }
 
 .card > img {
@@ -317,6 +318,7 @@ address {
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 }
 
 /* Flex Portfolio */
@@ -339,6 +341,7 @@ address {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  cursor: pointer;
 }
 
 .card-portfolio > img {
@@ -349,6 +352,7 @@ address {
 .card-footer-portfolio {
   margin-top: 20px;
   padding: 20px;
+  cursor: pointer;
 }
 
 .main-portfolio {
